@@ -1,3 +1,8 @@
+2006-07-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* keyboard.c (Fexecute_extended_command): Mention the argument
+	PREFIXARG in the doc string.
+
 2006-07-07  Kim F. Storm  <storm@cua.dk>
 
 	* fringe.c (Fdefine_fringe_bitmap): Doc fix.
